feat: add burger menu

--- a/plants/sass/abstracts/_constants.scss
+++ b/plants/sass/abstracts/_constants.scss
@@ -10,4 +10,5 @@ $color-background-form: #D6E7D2;
 $laptop-width: 1435px;
 $content-width: 1200px;
 $tablet-width: 765px;
-$mobile-width: 379px;
+$mobile-width: 380px;
+$small-mobile-width: 375px;
