--- a/plants/sass/components/_welcome.scss
+++ b/plants/sass/components/_welcome.scss
@@ -11,6 +11,10 @@
     position: relative;
   }
 
+  @include media-mobile {
+    padding: 5px 0 25px;
+  }
+
 
 }
 
@@ -28,6 +32,10 @@
     
   }
 
+  @include media-tablet {
+    display: none;
+  }
+
 }
 
 .welcome__info {
@@ -38,12 +46,16 @@
     max-width: none;
     padding: 15px 0 0;
 
-    //padding-right: 10px;
+    
   }
-  
+
+  @include media-tablet {
+    flex-basis: 100%;
+    
+  }
 
   
-
+  
 }
 
 .welcome__info-title {
@@ -51,17 +63,28 @@
     font-size: 4.1rem;
     padding-bottom: 29px;
 
+
+    .text-colored {
+      @extend %text-colored;
+    }
+
     @include media-content {
       max-width: 341px;
       font-size: 3.5rem;
       margin: 0;
       position: absolute;
     }
-    
 
-  .text-colored {
-    @extend %text-colored;
-  }
+    @include media-tablet {
+      font-size: 25px;
+    }
+
+    @include media-mobile {
+      width: 100%;
+      line-height: 35px;
+
+    }
+    
 }
 
 .welcome__info-text {
@@ -77,6 +100,11 @@
     line-height: 2.5rem;
     position: absolute;
   }
+
+  @include media-mobile {
+    padding-top: 90px;
+  }
+  
 }
 
 
