--- a/plants/sass/layout/_header.scss
+++ b/plants/sass/layout/_header.scss
@@ -4,6 +4,10 @@
     @include media-content {
         padding: 2.9rem 0;
     }
+
+    @include media-mobile {
+        padding: 18px 0;
+    }
     
 }
 
