--- a/plants/sass/abstracts/_mixins.scss
+++ b/plants/sass/abstracts/_mixins.scss
@@ -42,3 +42,7 @@
  @mixin media-mobile {
     @media (max-width: $mobile-width) { @content; }
  }
+
+ @mixin media-mobile-small {
+    @media (max-width: $small-mobile-width) { @content; }
+ }
