--- a/plants/sass/base/_hamburger.scss
+++ b/plants/sass/base/_hamburger.scss
@@ -31,6 +31,12 @@
     
 }
 
+    @include media-mobile {
+        position: absolute;
+        margin-bottom: 5px;
+        right: 7px;
+    }
+
 }
 
 .burger-line_first {
@@ -45,4 +51,43 @@
     @extend %burger-line;
     top: 60%;
     left: 0;
+}
+
+.header__nav-close {
+    display: none;
+
+    @include media-tablet {
+        display: block;
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        top: 30px;
+        right: 30px;
+        z-index: 11;
+        cursor: pointer;
+    }
+}
+
+.header_nav-close-line {
+
+    @include media-tablet {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: $color-brand;
+        top: 50%;
+
+
+        &:first-child {
+            transform: translateY(-50%) rotate(45deg);
+        }
+
+        &:last-child {
+            transform: translateY(-50%) rotate(-45deg);
+        }
+    }
+
+    
+   
 }
