--- a/plants/sass/base/_logo.scss
+++ b/plants/sass/base/_logo.scss
@@ -11,6 +11,10 @@
     @extend %font-add;
     @include font(1.5rem, normal, 400, 2rem);
     color: $color-text-additional;
+
+    @include media-mobile {
+        font-size: 1.7rem;
+    }
 }
 
 .logo-img {
