--- a/plants/sass/components/_contacts.scss
+++ b/plants/sass/components/_contacts.scss
@@ -16,7 +16,16 @@
     padding: 40px 0 0;
     gap: 250px;
 
+}
 
+   @include media-tablet {
+    gap: 132px;
+    padding: 23px 0 0px;
+   }
+
+  @include media-mobile {
+   
+  
   }
   
 }
@@ -28,6 +37,10 @@
 
   @include media-laptop {
     margin-left: 0;
+  }
+
+  @include media-tablet {
+    padding-top: 5.2rem;
   }
 }
 
@@ -51,6 +64,11 @@
   @include media-content {
     font-size: 4rem;
   }
+
+  @include media-mobile {
+    @include font (25px, normal, 700, 32px);
+    margin-right: 0;
+  }
   
 }
 
@@ -62,6 +80,12 @@
     width: 200px;
     height: 248px;
     margin-left: 10px;
+  }
+
+  @include media-tablet {
+    width: 100px;
+    height: 124px;
+    margin-left: 0;
   }
 }
 
