--- a/plants/sass/components/_navigation.scss
+++ b/plants/sass/components/_navigation.scss
@@ -5,8 +5,23 @@
    }
 
    @include media-tablet {
-    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: $color-text-primary;
+    z-index: 10;
+    transform: translateX(100%);
+    transition: .4s linear;
+
    }
+}
+
+.header__nav-active {
+    @include media-tablet {
+        transform: translateX(0);
+    }
 }
 
 
@@ -18,9 +33,13 @@
     @include media-content {
         padding-left: 0;
         padding-right: 10px;
-       }
+    }
    
-   
+    @include media-tablet {
+        flex-direction: column;
+        padding-right: 0;
+        padding-top: 50px;
+    }
 }
 
 .nav-item {
@@ -35,6 +54,16 @@
         padding-right: 5rem;
        }
 
+       @include media-tablet {
+        margin-bottom: 30px;
+        padding: 0;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+        
+       }
+
 }
 
 .nav-link {
@@ -45,6 +74,11 @@
 
     &:hover {
         color: $color-brand;
+    }
+
+    @include media-tablet {
+        color: $color-brand;
+        @include font(3.5rem,normal, 400, 4rem);
     }
 
 }
