--- a/plants/sass/components/_service.scss
+++ b/plants/sass/components/_service.scss
@@ -5,6 +5,10 @@
   @include media-content {
     padding: 58px 0 0;
   }
+
+  @include media-mobile {
+    padding: 30px 0 0;
+  }
 }
 
 .service__content {
@@ -26,10 +30,17 @@
   
 
   @include media-content {
-    font-size: 3.5rem;
-    line-height: 4.8rem;
+    @include font(35px, normal, 400, 48px);
     padding: 0;
     margin-bottom: 40px;
+  }
+
+  @include media-tablet {
+    @include font(25px, normal, 400, 32px);
+  }
+
+  @include media-mobile {
+    width: 187px;
   }
 }
 
@@ -44,7 +55,15 @@
     gap: 3.8rem;
   }
 
-  
+  @include media-tablet {
+    flex-wrap: wrap;
+  }
+
+  @include media-mobile {
+    width: 252px;
+    gap: 10px;
+  }
+
 }
 
 
